--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/src/css/covers.css" />
-  </head>
-  <body>
+<link rel="stylesheet" href="/src/css/covers.css">
     <section class="covers">
       <h2 class="visually-hidden">Collection of Covers</h2>
       <div class="content">
@@ -47,5 +39,4 @@
       </div>
     </section>
     <script type="module" src="/src/js/covers.js"></script>
-  </body>
-</html>
+
