--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,34 @@
 <header class="header">
   <div class="container header-container">
-    <svg class="header-icon" width="84" height="19">
-      <use href="./img/icons.svg#icon-jefferson"></use>
+    <nav class="header-nav-logo">
+      <a class="header-nav-logo" href="../index.html">
+        <img src="../img/heder/jeff.png" alt="logo" />
+        <svg class="header-icon" width="84" height="19">
+          <use href="./img/icons.svg#icon-jefferson"></use>
+        </svg>
+      </a>
+    </nav>
+
+    <svg class="header-icon" width="32" height="32">
+      <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
     </svg>
+
+    <!-- #region Menu -->
+    <div class="header-nav-box">
+      <p class="header-nav-menu">Menu</p>
+      <ul class="header-nav-list">
+        <li class="header-nav-list-item"><a href="">About me</a></li>
+        <li class="header-nav-list-item"><a href="">Benefits</a></li>
+        <li class="header-nav-list-item"><a href="">Projects</a></li>
+        <li class="header-nav-list-item"><a href="">FAQ</a></li>
+      </ul>
+    </div>
+    <!-- #endregion Menu -->
+
+    <button class="header-burger-btn" type="button">
+      <svg class="header-burger-ico" width="28" height="28">
+        <use href="./img/icons.svg#icon-burger"></use>
+      </svg>
+    </button>
   </div>
 </header>
