--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,17 +1,13 @@
 <header class="header">
   <div class="container header-container">
     <nav class="header-nav-logo">
-      <a class="header-nav-logo" href="../index.html">
-        <img src="../img/heder/jeff.png" alt="logo" />
+      <a class="header-nav-logo" href="./index.html">
+        <img src="./img/heder/jeff.png" alt="logo" />
         <svg class="header-icon" width="84" height="19">
           <use href="./img/icons.svg#icon-jefferson"></use>
         </svg>
       </a>
     </nav>
-
-    <svg class="header-icon" width="32" height="32">
-      <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
-    </svg>
 
     <!-- #region Menu -->
     <div class="header-nav-box">
