--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -7,7 +7,7 @@
     border-radius: 12px;
 }
 
-.work-together-wrapper {
+.work-together-title-wrapper {
     display: flex;
     gap: 8px;
     align-items: center;
@@ -33,11 +33,14 @@
     top: 56px;
 }
 
-.work-together-form-wrapper {
+.work-together-form {
     margin-top: 96px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
 
-.work-together-form {
+.work-together-form-box{
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -59,6 +62,7 @@ form input {
 
 input::placeholder {
     color: rgba(250, 250, 250, 0.6);
+    opacity: 0.5;
 }
 
 form input:hover,
@@ -67,19 +71,16 @@ form input:focus {
     border-bottom: 2px solid #4070eb;
 }
 
-.work-together-message {
-    margin-bottom: 16px;
-}
-
 .work-together-error-input,
 .work-together-error-message {
     display: none;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 12px;
-    line-height: 1.3;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: rgba(231, 74, 59, 1);
-    margin-top: -18px;
+    margin-top: -20px;
+    padding-left: 2px;
 }
 
 .work-together-button {
@@ -124,7 +125,7 @@ form input:focus {
 .work-together-link:focus,
 .work-together-link:hover {
     color: #4070eb;
-    box-shadow: 1px 1px 3px #4070eb;
+    box-shadow: 1px 1px 2px #4070eb;
 }
 
 @media screen and (max-width: 767px) {
@@ -155,18 +156,18 @@ form input:focus {
     }
 
     .title-next-line {
-            left: -89px;
+            left: -78px;
             top: 74px;
     }
 
     .work-together-form {
         flex-direction: row;
         align-items: center;
-        gap: 32px;
     }
 
-    .work-together-message {
-        margin-bottom: 0px;
+    .work-together-form-box {
+        flex-direction: row;
+        gap: 32px;
     }
 
     form input {
@@ -193,12 +194,12 @@ form input:focus {
 /* dekstop styles */
 
 @media screen and (min-width: 1440px) {
-.section-together {
+    .section-together {
     padding-left: 196px;
-}
+    }
 
-    .work-together-message {
-        margin-right: 54px;
+    .work-together-form {
+        gap: 86px;
     }
 
     form input {
@@ -208,20 +209,23 @@ form input:focus {
 
 /* MODAL STYLES */
 
-
 .work-together-backdrop {
     position: fixed;
     z-index: 999;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    display: none;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(15, 15, 16, 0.6);
-    /* transition: all 0.5s ease-in; */
+}
+
+.backdrop-opened {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
 }
 
 .work-together-modal {
@@ -246,17 +250,15 @@ form input:focus {
     border: none;
     outline: none;
     border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.4s ease;
 }
 
 .icon-close {
-    fill: #FBFBFB;
+    fill: #fafafa;
+    transition: transform 0.2s ease;
 }
 
-.icon-close:hover {
+.icon-close:hover,
+.icon-close:focus {
     transform: scale(1.4);
 }
 
@@ -284,5 +286,9 @@ form input:focus {
         padding: 64px;
         width: 492px;
         height: 246px;
+    }
+
+    .work-together-modal-title {
+        min-width: 364px;
     }
 }
