--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,42 +1,30 @@
-<link rel="stylesheet" href="/src/css/covers.css">
-    <section class="covers">
-      <h2 class="visually-hidden">Collection of Covers</h2>
-      <div class="content">
-<div class="cover-images">
 
-    <div class="covers-wrapper">
 
-      <div class="cover">
-        <img src="/src/img/Covers/first-screen-1.jpg" alt="" />
+  
 
-        <img src="/src/img/Covers/Rectangle-4.jpg" alt="" />
-      </div>
+      <section class="covers">
+        <h2 class="visually-hidden">Collection of Covers</h2>
+        <div class="cover-wrapper">
 
-      <div class="cover">
-        <img src="/src/img/Covers/Rectangle-5.jpg" alt="" />
+          <ul class="cover-list">
+            <li class = "cover-item"> <img src="/src/img/Covers/first-screen-1.jpg" alt=""></li>
+            <li class = "cover-item"> <img src="/src/img/Covers/rectangle-4.jpg" alt=""></li>
+          </ul>
+          <ul class="cover-list list-2">
+            <li class = "cover-item"> <img src="/src/img/Covers/rectangle-5.jpg" alt=""></li>
+            <li class = "cover-item"> <img src="/src/img/Covers/rectangle-6.jpg" alt=""></li>
+            <li class = "cover-item"> <img src="/src/img/Covers/rectangle-7.jpg" alt=""></li>
+          </ul>
+            <ul class="cover-list list-3">
+              <li class = "cover-item"> <img src="/src/img/Covers/rectangle-8.jpg" alt=""></li>
+              <li class = "cover-item"> <img src="/src/img/Covers/rectangle-9.jpg" alt=""></li>
+              <li class = "cover-item"> <img src="/src/img/Covers/rectangle-10.jpg" alt=""></li>
+            </ul>
+        <ul class="cover-list list-4">
+          <li class = "cover-item"> <img src="/src/img/Covers/rectangle-11.jpg" alt=""></li>
+          <li class = "cover-item"> <img src="/src/img/Covers/rectangle-12.jpg" alt=""></li>
+        </ul>
+        </div>
 
-        <img src="/src/img/Covers/Rectangle-6.jpg" alt="" />
-
-        <img src="/src/img/Covers/Rectangle-7.jpg" alt="" />
-      </div>
-
-      <div class="cover">
-        <img src="/src/img/Covers/Rectangle-8.jpg" alt="" />
-
-        <img src="/src/img/Covers/Rectangle-9.jpg" alt="" />
-
-        <img src="/src/img/Covers/Rectangle-10.jpg" alt="" />
-      </div>
-
-      <div class="cover">
-        <img src="/src/img/Covers/Rectangle-11.jpg" alt="" />
-
-        <img src="/src/img/Covers/Rectangle-12.jpg" alt="" />
-      </div>
-
-    </div>
-</div>
-      </div>
-    </section>
-    <script type="module" src="/src/js/covers.js"></script>
-
+  
+      </section>
