header add js, swiper

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,12 +11,12 @@
 
     <!-- #region Menu -->
     <div class="header-nav-box">
-      <p class="header-nav-menu">Menu</p>
-      <ul class="header-nav-list">
-        <li class="header-nav-list-item"><a href="">About me</a></li>
-        <li class="header-nav-list-item"><a href="">Benefits</a></li>
-        <li class="header-nav-list-item"><a href="">Projects</a></li>
-        <li class="header-nav-list-item"><a href="">FAQ</a></li>
+      <button class="header-nav-menu-btn" type="button">Menu</button>
+      <ul class="header-nav-list visualy-hidden">
+        <li class="header-nav-list-item"><a href="#about-me">About me</a></li>
+        <li class="header-nav-list-item"><a href="#benefits">Benefits</a></li>
+        <li class="header-nav-list-item"><a href="#projects">Projects</a></li>
+        <li class="header-nav-list-item"><a href="#faq">FAQ</a></li>
       </ul>
     </div>
     <!-- #endregion Menu -->
@@ -26,5 +26,7 @@
         <use href="./img/icons.svg#icon-burger"></use>
       </svg>
     </button>
+
+    <a class="header-link" href="#work-together">Order the project</a>
   </div>
 </header>
