--- a/src/css/header.css
+++ b/src/css/header.css
@@ -40,10 +40,44 @@
 .header-nav-box {
   display: none;
 }
-
 /* #endregion Menu */
 
+.header-link {
+  display: none;
+}
+
+.visualy-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 @media only screen and (min-width: 768px) {
+  .header-burger-btn,
+  .header-burger-ico {
+    display: none;
+  }
+
+  .header-link {
+    display: block;
+    border-radius: 60px;
+    padding: 18px 24px;
+    width: 163px;
+    height: 55px;
+    background-color: #0041e8;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+    color: #fafafa;
+    text-align: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-link:hover,
+  .header-link:focus {
+    background-color: #4070eb;
+  }
+
   .header-nav-box {
     display: flex;
     align-items: center;
@@ -51,13 +85,16 @@
     justify-content: center;
     gap: 8px;
   }
-  .header-nav-menu {
+  .header-nav-menu-btn {
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -0.02em;
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #fafafa;
+    background-color: transparent;
+    border: none;
+    padding-top: 10px;
   }
   .header-nav-list {
     display: flex;
