--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,11 +21,13 @@
     </div>
     <!-- #endregion Menu -->
 
+    <!-- #region Burger Button -->
     <button class="header-burger-btn" type="button">
       <svg class="header-burger-ico" width="28" height="28">
         <use href="./img/icons.svg#icon-burger"></use>
       </svg>
     </button>
+    <!-- #endregion Burger Button -->
 
     <a class="header-link" href="#work-together">Order the project</a>
   </div>
