--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <!-- Hero section-->
 
-<section class="hero-section">
+<section class="hero-section" id="hero">
   <div class="container hero-content-container">
     <h1 class="hero-title">
-      Hello.<br />
-      I’m Fullstack developer Lloyd Jefferson.
+      <span>Hello.</span>
+      <span>I’M FULLSTACK DEVELOPER LLOYD JEFFERSON.</span>
     </h1>
 
     <ul class="hero-socials-list">
@@ -27,7 +27,8 @@
           >FB
         </a>
       </li>
-      <li class="hero-socials--tem">
+
+      <li class="hero-socials-item">
         <a
           class="hero-socials-link"
           href="https://www.youtube.com/c/GoIT"
@@ -36,6 +37,7 @@
           >YT
         </a>
       </li>
+
       <li class="hero-socials-item">
         <a
           class="hero-socials-link"
@@ -45,6 +47,7 @@
           >GH
         </a>
       </li>
+
       <li class="hero-socials-item">
         <a
           class="hero-socials-link email"
