--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -46,6 +46,7 @@
             pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
           />
           <p class="work-together-error-input">Invalid email, try again</p>
+          <p class="work-together-success-input">Success!</p>
         </div>
 
         <div class="work-together-form-wrapper">
@@ -70,12 +71,12 @@
       <li class="work-together-item">
         <a
           href="mailto:lloydjefferson@gmail.com"
-          class="work-together-link email-link"
+          class="work-together-email-link"
           >lloydjefferson@gmail.com</a
         >
       </li>
       <li class="work-together-item">
-        <a href="tel:+3801111111111" class="work-together-link phone-link"
+        <a href="tel:+3801111111111" class="work-together-phone-link"
           >+380 11 1111 11 11</a
         >
       </li>
