--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -5,20 +5,20 @@
         <source
           media="(min-width: 768px)"
           srcset="
-            ./img/work-together/face-tab-dek@1x.jpg 1x,
-            ./img/work-together/face-tab-dek@2x.jpg 2x
+            ./img/work-together/face-tab@1x.png 1x,
+            ./img/work-together/face-tab@2x.png 2x
           "
         />
         <source
           media="(max-width: 767px)"
           srcset="
-            ./img/work-together/face-mob@1x.jpg 1x,
-            ./img/work-together/face-mob@2x.jpg 2x
+            ./img/work-together/face-mob@1x.png 1x,
+            ./img/work-together/face-mob@2x.png 2x
           "
         />
         <img
           class="face-logo-img"
-          src="./img/work-together/face-mob@1x.jpg"
+          src="./img/work-together/face-mob@1x.png"
           alt="lloyd-developer"
           width="70"
           height="70"
