--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,14 +1,14 @@
-<section class="benefits">
-  <div class="benefits-container container">
+<section class="benefits-section" id="benefits">
+  <div class="container benefits-container">
     <div class="content-title-wrapper">
       <h2 class="benefits-title">Benefits of working with me</h2>
     </div>
-    <div class="content-list-wrapper">
+    <div class="benefits-content-wrapper">
       <ul class="benefits-list">
         <li class="benefits-item">
           <div class="benefits-icon-wrapper">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/icons.svg#icon-user"></use>
+              <use href="./img/icons.svg#icon-user"></use>
             </svg>
           </div>
           <h3 class="benefits-item-title">Expertise</h3>
@@ -20,7 +20,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-wrapper">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/icons.svg#icon-message-chat-circle"></use>
+              <use href="./img/icons.svg#icon-message-chat-circle"></use>
             </svg>
           </div>
           <h3 class="benefits-item-title">Communication</h3>
@@ -32,7 +32,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-wrapper">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/icons.svg#icon-brush"></use>
+              <use href="./img/icons.svg#icon-brush"></use>
             </svg>
           </div>
           <h3 class="benefits-item-title">Art</h3>
@@ -44,7 +44,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-wrapper">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/icons.svg#icon-hourglass"></use>
+              <use href="./img/icons.svg#icon-hourglass"></use>
             </svg>
           </div>
           <h3 class="benefits-item-title">Urgent execution</h3>
