--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,33 +1,83 @@
-<section class="about-me section">
-    <button class="toggle-btn" aria-expanded="false" aria-controls="about-content">
-      <span class="arrow"></span> ABOUT ME
-    </button>
-    <div id="about-content" class="about-me__content">
-      <p>I am Lloyd Jefferson, a talented programmer...</p>
-      <p>Able to work both independently and in a team...</p>
-    </div>
-  </section>
-  
-  <section class="role section">
-    <button class="toggle-btn" aria-expanded="false" aria-controls="role-content">
-      <span class="arrow"></span> ROLE
-    </button>
-    <div id="role-content" class="role__content">
-      <p>Frontend development</p>
-      <p>HeadlessCMS, Wordpress</p>
-      <p>Blender (enjoy)</p>
-    </div>
-  </section>
-  
-  <section class="education section">
-    <button class="toggle-btn" aria-expanded="false" aria-controls="education-content">
-      <span class="arrow"></span> EDUCATION
-    </button>
-    <div id="education-content" class="education__content">
-      <p>2018 - 2019: Frontend Development Diploma...</p>
-      <p>2019 - 2020: Advanced Web Development Certificate...</p>
-      <p>2020 - 2022: Advanced Blender Animation Techniques...</p>
-    </div>
-  </section>
-  
+<section id="about-me" class="about-me">
+  <div class="container">
+    <ul class="accordion-container" id="accordion-about">
+      <li class="ac active">
+        <h3 class="ac-header">
+          <button type="button" class="ac-trigger">
+            about-me
+            <span class="icon-span">
+              <svg class="icon-accordion" width="18" height="18">
+                <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </span>
+          </button>
+        </h3>
+        <div class="ac-panel">
+          <p class="ac-text">
+            I am Lloyd Jefferson, a talented programmer with extensive expertise
+            in software development. I have an understanding of different
+            programming languages and technologies, always ready to improve my
+            skills. I always follow the latest trends and look for
+            unconventional, creative solutions to problems. I have a high level
+            of analytical skills and am able to effectively solve even the most
+            difficult tasks encountered on the way.
+          </p>
+          <p class="ac-text">
+            Able to work both independently and in a team. I can effectively
+            cooperate with colleagues, exchanging ideas and finding optimal
+            solutions. Professional maturity allows you to calmly cope with
+            challenges and stressful situations, while maintaining a high
+            quality of work. I am always looking for opportunities for
+            self-improvement. I actively study new technologies and practices to
+            stay abreast of the latest innovations. I have a strong
+            understanding of various programming languages, frameworks and
+            architectural concepts that allow me to create efficient and
+            scalable software.
+          </p>
+        </div>
+      </li>
+      <li class="ac">
+        <h3 class="ac-header">
+          <button type="button" class="ac-trigger">
+            role
+            <span class="icon-span">
+              <svg class="icon-accordion" width="18" height="18">
+                <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </span>
+          </button>
+        </h3>
+        <div class="ac-panel">
+          <p class="ac-text">Frontend development</p>
+          <p class="ac-text">HeadlessCMS, Wordpress</p>
+          <p class="ac-text">Blender (enjoy)</p>
+        </div>
+      </li>
+      <li class="ac">
+        <h3 class="ac-header">
+          <button type="button" class="ac-trigger">
+            education
+            <span class="icon-span">
+              <svg class="icon-accordion" width="18" height="18">
+                <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </span>
+          </button>
+        </h3>
+        <div class="ac-panel">
+          <p class="ac-text">
+            2018 – 2019 / Frontend Development Diploma, GoIT IT School, New York
+          </p>
+          <p class="ac-text">
+            2019 – 2020 / Advanced Web Development Certificate, GoIT IT School, New York
+          </p>
+          <p class="ac-text">
+            2020 – 2022 / Advanced Blender Animation Techniques, Udemy
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
+
   
