--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,4 +31,16 @@
 
     <a class="header-link" href="#work-together">Order the project</a>
   </div>
+  <!-- #region Mobile Menu -->
+  <div class="mobile-menu">
+    <div class="mobile-menu-container">
+      <button class="mobile-menu-close-btn" type="button">
+        <svg class="mobile-menu-close-ico" width="28" height="28">
+          <use href="./img/icons.svg#icon-close-modal-heder"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu-wrapper"></div>
+    </div>
+  </div>
+  <!-- #endregion Mobile Menu -->
 </header>
