--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -105,8 +105,7 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -0.02em;
-  background: var(--background);
-  color: var(--white);
+  color: #fafafa;
 }
 
 #accordion-about .ac:first-child .ac-panel .ac-text:first-child {
