--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -7,7 +7,7 @@
             about-me
             <span class="icon-span">
               <svg class="icon-accordion" width="18" height="18">
-                <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
+                <use xlink:href="./img/icons.svg#icon-menu-open"></use>
               </svg>
             </span>
           </button>
@@ -42,7 +42,7 @@
             role
             <span class="icon-span">
               <svg class="icon-accordion" width="18" height="18">
-                <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
+                <use xlink:href="./img/icons.svg#icon-menu-open"></use>
               </svg>
             </span>
           </button>
@@ -59,7 +59,7 @@
             education
             <span class="icon-span">
               <svg class="icon-accordion" width="18" height="18">
-                <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
+                <use xlink:href="./img/icons.svg#icon-menu-open"></use>
               </svg>
             </span>
           </button>
@@ -69,7 +69,8 @@
             2018 – 2019 / Frontend Development Diploma, GoIT IT School, New York
           </p>
           <p class="ac-text">
-            2019 – 2020 / Advanced Web Development Certificate, GoIT IT School, New York
+            2019 – 2020 / Advanced Web Development Certificate, GoIT IT School,
+            New York
           </p>
           <p class="ac-text">
             2020 – 2022 / Advanced Blender Animation Techniques, Udemy
@@ -79,5 +80,3 @@
     </ul>
   </div>
 </section>
-
-  
