--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -18,9 +18,7 @@
 }
 
 .ac .ac-trigger {
-  font:
-    bold 16px "Arial",
-    sans-serif;
+  font: bold 16px 'Arial', sans-serif;
   color: var(--color-black);
   text-align: left;
   width: 100%;
@@ -33,11 +31,11 @@
   text-decoration: none;
   margin: 0;
   border: 0;
-  color:rgba(250, 250, 250, 1)
+  color: rgba(250, 250, 250, 1);
 }
 
 .ac .ac-trigger::after {
-  content: "+";
+  content: '+';
   text-align: center;
   width: 15px;
   transform: translate(0, -50%);
@@ -53,9 +51,7 @@
 }
 
 .ac .ac-panel .ac-text {
-  font:
-    15px/24px "Arial",
-    sans-serif;
+  font: 15px/24px 'Arial', sans-serif;
   color: var(--color-black);
   padding: 8px;
   margin: 0;
@@ -70,12 +66,12 @@
 }
 
 .ac.is-active > .ac-header .ac-trigger::after {
-  content: "\2013";
+  content: '\2013';
 }
 
 /* My-styles */
 
-.ac-header { 
+.ac-header {
   color: rgba(250, 250, 250, 1);
 }
 
@@ -175,8 +171,7 @@
   .faq-list .faq-item:nth-last-child(1) {
     padding-bottom: 32px;
   }
-  
-  
+
   .faq-list .faq-item .open-btn:nth-last-child(6) {
     padding-right: 171px;
   }
