--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,11 +1,10 @@
 .covers{
   background-color: #1C1D20;
-  background-image: url('../img/Covers/background.png');
- background-size: contain;   
-  background-position: center;  
-  background-repeat: no-repeat; 
-  background-attachment: fixed; 
-  padding: 104px 0;
+  background-image: url('../img/covers/background.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-attachment: scroll; 
+  padding: 64px 0;
 }
 
 
