add modal window

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,7 +39,23 @@
           <use href="./img/icons.svg#icon-close-modal-heder"></use>
         </svg>
       </button>
-      <div class="mobile-menu-wrapper"></div>
+      <div class="mobile-menu-wrapper">
+        <div class="mobile-menu-nav-wrapper">
+          <ul class="mobile-nav-list">
+            <li class="mobile-nav-list-item">
+              <a href="#about-me">About me</a>
+            </li>
+            <li class="mobile-nav-list-item">
+              <a href="#benefits">Benefits</a>
+            </li>
+            <li class="mobile-nav-list-item">
+              <a href="#projects">Projects</a>
+            </li>
+            <li class="mobile-nav-list-item"><a href="#faq">FAQ</a></li>
+          </ul>
+        </div>
+        <a class="order-project-btn" href="#work-together">Order the project</a>
+      </div>
     </div>
   </div>
   <!-- #endregion Mobile Menu -->
