--- a/src/css/header.css
+++ b/src/css/header.css
@@ -52,6 +52,120 @@
   pointer-events: none;
 }
 
+/* #region Mobile Menu */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/herophoto/Glasseffect_mob@1x.png);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* visible */
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+body.no-scroll {
+  overflow: hidden;
+}
+
+.mobile-menu-container {
+  width: 100%;
+  height: 100%;
+  padding: 32px 16px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.mobile-menu-close-btn {
+  position: absolute;
+  top: 30px;
+  right: 32px;
+  background-color: transparent;
+  border: none;
+}
+
+.mobile-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+}
+
+.mobile-menu-nav-wrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-nav-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+}
+
+.mobile-nav-list-item a {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  position: relative;
+}
+
+.mobile-nav-list-item a::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+}
+
+.order-project-btn {
+  margin-top: auto;
+  display: block;
+  border-radius: 60px;
+  padding: 18px 24px;
+  width: 163px;
+  height: 55px;
+  background-color: #0041e8;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  color: #fafafa;
+  text-align: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-project-btn:hover,
+.order-project-btn:focus {
+  background-color: #4070eb;
+  outline: none;
+}
+/* #endregion Mobile Menu */
+
 @media only screen and (min-width: 768px) {
   .header-burger-btn,
   .header-burger-ico {
