--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -3,7 +3,7 @@
   <div class="cover-wrapper">
     <ul class="cover-list">
       <li class="cover-item"> <img src="./img/covers/first-screen-1.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-4.jpg" alt=""></li>
+      <li class="cover-item"> <img src="./img/covers/rectangle-10.jpg" alt=""></li>
     </ul>
     <ul class="cover-list list-2">
       <li class="cover-item"> <img src="./img/covers/rectangle-5.jpg" alt=""></li>
