--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -289,32 +289,25 @@
 
 /* #region Swiper-section */
 
+/*Mobile*/
+
 .about-me-swiper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  text-align: center;
-
+  justify-content: space-between;
   overflow: hidden;
   width: 100%;
 }
 
 .swiper-skills-wrapper {
   display: flex;
-  flex-wrap: nowrap;
+  overflow: hidden;
   width: 100%;
+  width: 260px;
 }
 
-.swiper-list-skills {
+.swiper-list-skills.swiper-wrapper {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  transition: transform 0.3s ease;
 }
 
 .swiper-item.swiper-slide {
@@ -328,6 +321,7 @@
   flex-shrink: 0;
   border-radius: 100%;
   background-color: transparent;
+  border: 1px solid rgba(250, 250, 250, 0.2);
 
   font-weight: 500;
   font-size: 16px;
@@ -342,23 +336,70 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+
   cursor: pointer;
   background-color: transparent;
   border: none;
-
+  border-radius: 50px;
   margin-left: auto;
-
   color: #3b3b3b;
   stroke: none;
   fill: none;
+  outline: none;
+  transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+}
 
+.swiper-item.swiper-slide.swiper-slide-active {
+  /* background-color: #0041e8;
+  border: 0 solid transparent;
+  color: #fafafa; */
+
+  background-color: #242527;
+  color: #0041e8;
+  border-color: #0041e8;
   transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .swiper-skills-button-next:hover,
 .swiper-skills-button-next:focus {
-  color: #4070eb;
+  color: #0041e8;
+}
+
+.swiper-skills-button-next:focus-visible {
+  outline: 2px solid #0041e8;
+}
+
+/* .icon-skills-button {
+  stroke: #3b3b3b;
+  fill: #3b3b3b;
+} */
+
+/* Tablet */
+@media only screen and (min-width: 768px) {
+  .swiper-skills-wrapper {
+    width: 600px;
+  }
+
+  .swiper-item.swiper-slide {
+    width: 200px;
+    height: 200px;
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: -0.02em;
+  }
+
+  .icon-skills-button {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+/* Desktop */
+
+@media only screen and (min-width: 1440px) {
+  .swiper-skills-wrapper {
+    width: 1200px;
+  }
 }
 
 /* #endregion */
