--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -14,26 +14,26 @@
         <picture>
           <source
             srcset="
-              ../img/about-me/image_my-photo_desk@1x.jpg,
-              ../img/about-me/image_my-photo_desk@2x.jpg
+              ./img/about-me/image_my-photo_desk@1x.jpg,
+              ./img/about-me/image_my-photo_desk@2x.jpg
             "
             media="(min-width: 1440px)"
           />
           <source
             srcset="
-              ../img/about-me/image_my-photo_tab@1x.jpg,
-              ../img/about-me/image_my-photo_tab@2x.jpg
+              ./img/about-me/image_my-photo_tab@1x.jpg,
+              ./img/about-me/image_my-photo_tab@2x.jpg
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ../img/about-me/image_my-photo_mob@1x.jpg,
-              ../img/about-me/image_my-photo_mob@2x.jpg
+              ./img/about-me/image_my-photo_mob@1x.jpg,
+              ./img/about-me/image_my-photo_mob@2x.jpg
             "
             media="(min-width: 768px)"
           />
-          <img src="../img/about-me/image_my-photo_mob@1x.jpg" alt="my photo" />
+          <img src="./img/about-me/image_my-photo_mob@1x.jpg" alt="my photo" />
         </picture>
       </div>
     </div>
@@ -119,21 +119,22 @@
       </ul>
     </div>
     <div class="about-me-swiper">
-      <div class="swiper-skills-wrapper">
-        <ul class="swiper-list-skills">
-          <li class="swiper-item swiper-slide">HTML/SCC</li>
+      <div class="swiper-skills-wrapper swiper">
+        <ul class="swiper-list-skills swiper-wrapper">
+          <li class="swiper-item swiper-slide">HTML/CSS</li>
           <li class="swiper-item swiper-slide">JavaScript</li>
           <li class="swiper-item swiper-slide">React</li>
           <li class="swiper-item swiper-slide">Node.js</li>
           <li class="swiper-item swiper-slide">React Native</li>
-          <li class="swiper-item swiper-slide">Node.js</li>
           <li class="swiper-item swiper-slide">TypeScript</li>
           <li class="swiper-item swiper-slide">Soft skills</li>
         </ul>
       </div>
+
+      <!-- Next skill button -->
       <div class="swiper-skills-button-next">
-        <svg class="icon-skills-button" width="40" height="40">
-          <use href="../img/icons.svg#icon-arrow-narrow-right"></use>
+        <svg class="icon-skills-button" width="28" height="28">
+          <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
         </svg>
       </div>
     </div>
