projects section done

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,8 +3,10 @@
   <div class="reviews-container container">
     <h2 class="reviews-h">REVIEWS</h2>
 
-    <div class="swiper">
+    <div class="swiper reviews-swiper">
+      <!-- new class reviews-swiper added  line six-->
       <div class="swiper-wrapper"></div>
+
     </div>
 
     <div class="buttons">
