--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,7 +1,7 @@
-<section class="faq">
+<section class="faq" id="faq">
     <div class="container faq-container">
       <h2 class="faq-title">FAQ</h2>
-      <ul class="accordion-container faq-list">
+      <ul class="accordion-container-faq faq-list">
         <li class="ac faq-item">
           <h3 class="ac-header">
             <button type="button" class="ac-trigger open-btn">
