--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,4 +1,4 @@
-.swiper-slide {
+.reviews .swiper-slide {
   min-height: 302px;
   width: 343px;
   border-radius: 20px;
@@ -93,7 +93,7 @@
   color: red;
 }
 
-.swiper {
+.reviews .swiper {
   margin-bottom: 32px;
 }
 
