about-me_changes-swiper

--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -119,22 +119,22 @@
       </ul>
     </div>
     <div class="about-me-swiper">
-      <div class="swiper-skills-wrapper swiper">
-        <ul class="swiper-list-skills swiper-wrapper">
-          <li class="swiper-item swiper-slide">HTML/CSS</li>
-          <li class="swiper-item swiper-slide">JavaScript</li>
-          <li class="swiper-item swiper-slide">React</li>
-          <li class="swiper-item swiper-slide">Node.js</li>
-          <li class="swiper-item swiper-slide">React Native</li>
-          <li class="swiper-item swiper-slide">TypeScript</li>
-          <li class="swiper-item swiper-slide">Soft skills</li>
+      <div class="swiper my-skill-swiper">
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide swiper-item">HTML/CSS</li>
+          <li class="swiper-slide swiper-item">JavaScript</li>
+          <li class="swiper-slide swiper-item">React</li>
+          <li class="swiper-slide swiper-item">Node.js</li>
+          <li class="swiper-slide swiper-item">TypeScript</li>
+          <li class="swiper-slide swiper-item">Soft skills</li>
+          <li class="swiper-slide swiper-item">WordPress</li>
         </ul>
       </div>
 
       <!-- Next skill button -->
       <div class="swiper-skills-button-next">
         <svg class="icon-skills-button" width="28" height="28">
-          <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
+          <use href="../img/icons.svg#icon-arrow-narrow-right"></use>
         </svg>
       </div>
     </div>
