--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -248,6 +248,8 @@
 
 /*Mobile*/
 
+/*Mobile*/
+
 .about-me-swiper {
   display: flex;
   align-items: center;
@@ -256,27 +258,26 @@
   width: 100%;
 }
 
-.swiper-skills-wrapper {
+.my-skill-swiper {
   display: flex;
   overflow: hidden;
-  width: 100%;
   width: 260px;
+
+  margin-top: 32px;
 }
 
-.swiper-list-skills.swiper-wrapper {
-  display: flex;
-}
-
-.swiper-item.swiper-slide {
+/* Styles for slides */
+.swiper-slide.swiper-item {
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   width: 130px;
-  height: 130px;
+  /* height: 130px; */
 
   flex-shrink: 0;
-  border-radius: 100%;
+  border-radius: 50%;
+  aspect-ratio: 1 / 1;
   background-color: transparent;
   border: 1px solid rgba(250, 250, 250, 0.2);
 
@@ -289,57 +290,57 @@
   transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.swiper-skills-button-next {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  border-radius: 50px;
-  margin-left: auto;
-  color: #3b3b3b;
-  stroke: none;
-  fill: none;
-  outline: none;
-  transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.swiper-item.swiper-slide.swiper-slide-active {
-  /* background-color: #0041e8;
-  border: 0 solid transparent;
-  color: #fafafa; */
-
+/* Styles for active slides */
+.swiper-slide-active.swiper-item {
   background-color: #242527;
   color: #0041e8;
   border-color: #0041e8;
   transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+/* Styles for next-button */
+.swiper-skills-button-next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Styles for button-icon */
+.icon-skills-button {
+  fill: rgba(250, 250, 250, 0.6);
+  transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Styles for hover, focus button */
 .swiper-skills-button-next:hover,
 .swiper-skills-button-next:focus {
   color: #0041e8;
+  border-color: #0041e8;
 }
 
-.swiper-skills-button-next:focus-visible {
-  outline: 2px solid #0041e8;
+/* Styles for hover, focus on icon*/
+.icon-skills-button:hover,
+.icon-skills-button:focus {
+  fill: #0041e8;
+  stroke: #0041e8;
+  color: #0041e8;
 }
-
-/* .icon-skills-button {
-  stroke: #3b3b3b;
-  fill: #3b3b3b;
-} */
 
 /* Tablet */
 @media only screen and (min-width: 768px) {
-  .swiper-skills-wrapper {
+  .my-skill-swiper {
     width: 600px;
+
+    margin-top: 64px;
   }
 
-  .swiper-item.swiper-slide {
+  .swiper-slide.swiper-item {
     width: 200px;
-    height: 200px;
+    /* height: 200px; */
     font-weight: 500;
     font-size: 20px;
     letter-spacing: -0.02em;
@@ -354,9 +355,10 @@
 /* Desktop */
 
 @media only screen and (min-width: 1440px) {
-  .swiper-skills-wrapper {
+  .my-skill-swiper {
     width: 1200px;
+
+    margin-top: 96px;
   }
 }
-
 /* #endregion */
