--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,6 +1,6 @@
 .covers {
   background-color: #1c1d20;
-  background-image: url('./img/covers/background.png');
+  background-image: url('../img/covers/background.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-attachment: scroll;
@@ -38,13 +38,13 @@
   padding: 0;
   will-change: transform;
   transform: translate(0, 0);
-  transform: rotate(15deg);
+  transform: rotate(17deg);
 }
 
 .cover-item img {
   display: block;
-  width: 282px;
-  height: 162px;
+  min-width: 282px;
+  min-height: 162px; ;
   object-fit: cover;
 }
 @media (min-width: 768px) {
@@ -76,18 +76,18 @@
 
 @keyframes move-right-down {
   0% {
-    transform: translate(0, 0) rotate(15deg);
+    transform: translate(0, 0) rotate(17deg);
   }
   100% {
-    transform: translate(50vw, 15vw) rotate(15deg);
+    transform: translate(50vw, 15vw) rotate(17deg);
   }
 }
 @keyframes move-left-high {
   0% {
-    transform: translate(50vw, 15vw) rotate(15deg);
+    transform: translate(50vw, 15vw) rotate(17deg);
   }
   100% {
-    transform: translate(0, 0) rotate(15deg);
+    transform: translate(0, 0) rotate(17deg);
   }
 }
 
