--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -2,22 +2,145 @@
   <h2 class="visually-hidden">Collection of Covers</h2>
   <div class="cover-wrapper">
     <ul class="cover-list">
-      <li class="cover-item"> <img src="./img/covers/first-screen-1.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-10.jpg" alt=""></li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/first-screen-1.jpg"
+          alt=""
+          srcset="./img/covers/first-screen-1@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-10.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-10@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-6.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-5@2x.jpg 2x"
+        />
+      </li>
     </ul>
     <ul class="cover-list list-2">
-      <li class="cover-item"> <img src="./img/covers/rectangle-5.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-6.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-7.jpg" alt=""></li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-5.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-5@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-6.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-6@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-7.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-7@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-5.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-5@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-6.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-6@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-7.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-7@2x.jpg 2x"
+        />
+      </li>
     </ul>
     <ul class="cover-list list-3">
-      <li class="cover-item"> <img src="./img/covers/rectangle-8.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-9.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-10.jpg" alt=""></li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-8.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-8@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-9.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-9@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-10.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-10@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-8.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-8@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-9.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-9@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-10.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-10@2x.jpg 2x"
+        />
+      </li>
     </ul>
     <ul class="cover-list list-4">
-      <li class="cover-item"> <img src="./img/covers/rectangle-11.jpg" alt=""></li>
-      <li class="cover-item"> <img src="./img/covers/rectangle-12.jpg" alt=""></li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-11.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-11@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-12.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-12@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-11.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-11@2x.jpg 2x"
+        />
+      </li>
+      <li class="cover-item">
+        <img
+          src="./img/covers/rectangle-12.jpg"
+          alt=""
+          srcset="./img/covers/rectangle-12@2x.jpg 2x"
+        />
+      </li>
     </ul>
   </div>
 </section>
